# infra

./: .gitignore  .spectral.yaml  Cargo.toml  Justfile  README.md
api/: main.yaml
dns/: .terraform.lock.hcl  main.tf  outputs.tf
dns/certificate/: main.tf  outputs.tf  variables.tf
dns/records/: main.tf  variables.tf
functions/account-confirm/: Cargo.toml
functions/account-confirm/src/: main.rs  payload.rs  response.rs
functions/account-create/: Cargo.toml
functions/account-create/fixtures/events/: account-create.json
functions/account-create/src/: main.rs  payload.rs  response.rs
main/: .terraform.lock.hcl  backend.tf  functions.tf  main.tf  outputs.tf  policies.tf  providers.tf  roles.tf  security-groups.tf
main/apigateway/: main.tf  outputs.tf  variables.tf
main/bucket/: main.tf  outputs.tf  variables.tf
main/function/: main.tf  outputs.tf  variables.tf
main/role/: main.tf  outputs.tf  principals.txt  variables.tf
main/security-group/: main.tf  outputs.tf  variables.tf
