[package]
name    = "account-confirm"
version = "0.1.0"
edition = "2021"
authors = ["Eduardo Campaña"]

[dependencies]
aws-config                      = { version = "1.1.2", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-cognitoidentityprovider = { version = "1.11.0", default-features = false }
lambda_http                     = { version = "0.9.1", default-features = false, features = ["apigw_rest"] }
serde                           = "1.0.195"
serde_json                      = "1.0.111"
tokio                           = { version = "1", features = ["macros"] }
tracing                         = { version = "0.1", default-features = false, features = ["log"] }
tracing-subscriber              = { version = "0.3", default-features = false, features = ["fmt"] }
validator                       = { version = "0.16.1", features = ["derive"] }
