[package]
name    = "account-create"
version = "0.1.0"
edition = "2021"
authors = ["Eduardo Campaña"]

[dependencies]
aws-config                      = { version = "1.1.2", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-cognitoidentityprovider = { version = "1.11.0", default-features = false }
lambda_http                     = { version = "0.9.1", default-features = false, features = ["apigw_rest"] }
regex-lite                      = { version = "0.1.5", default-features = false }
serde                           = "1.0.195"
serde_json                      = "1.0.111"
tokio                           = "1.35.1"
validator                       = { version = "0.16.1", features = ["derive"] }
